docs: update for categories endpoints
